--- a/responsive-style.css
+++ b/responsive-style.css
@@ -35,6 +35,9 @@
 
     .hamBurger i{
         float: right;
+        z-index: 500;
+        position: relative;
+        top: 90px;
     }
     
 }
