--- a/responsive-style.css
+++ b/responsive-style.css
@@ -16,7 +16,7 @@
     }
 
     .navBar{
-        display: none;;
+        display: none;
         position: relative;
         text-align: center;
         width: 100%;
