--- a/responsive-style.css
+++ b/responsive-style.css
@@ -20,7 +20,7 @@
         position: relative;
         text-align: center;
         width: 100%;
-        display: flex;
+        /* display: flex; */
         flex-direction: column;
         background-color: #EC550F;
     }
